<resources>
    <string name="app_name">AWIS</string>
    <string name="preference_phonebook_key">national.json</string>
    <string name="state_act">ACT</string>
    <string name="state_nsw">NSW</string>
    <string name="state_nt">NT</string>
    <string name="state_qld">QLD</string>
    <string name="state_sa">SA</string>
    <string name="state_tas">TAS</string>
    <string name="state_vic">VIC</string>
    <string name="state_wa">WA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_test_hint">Search...</string>
</resources>