<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/states_linear_layout"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/state_nsw_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/state_nsw" />

        <TextView
            android:id="@+id/state_nt_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/state_nt" />

        <TextView
            android:id="@+id/state_qld_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/state_qld" />

        <TextView
            android:id="@+id/state_sa_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/state_sa" />

        <TextView
            android:id="@+id/state_tas_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/state_tas" />

        <TextView
            android:id="@+id/state_vic_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/state_vic" />

        <TextView
            android:id="@+id/state_wa_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="32sp"
            android:gravity="center"
            android:text="@string/state_wa" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>